<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context="com.example.android.leeuwenborgh.MainActivity">

        <ImageView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:src="@drawable/leeuwenborgh_color"
            tools:ignore="ContentDescription" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:contentDescription="@string/leeuwenborgh_photo_description"
            android:src="@drawable/leeuwenborgh_photo_low" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="@dimen/logo_layout_width"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/logo_margin_bottom"
            android:layout_marginTop="@dimen/logo_margin_top"
            android:adjustViewBounds="true"
            android:contentDescription="@string/leeuwenborgh_logo_description"
            android:src="@drawable/leeuwenborgh_logo_png" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/margin_bottom">

                <TextView
                    android:id="@+id/description_title"
                    style="@style/Title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_bottom"
                    android:layout_marginLeft="@dimen/margin_left_and_start_"
                    android:layout_marginStart="@dimen/margin_left_and_start_"
                    android:layout_marginTop="@dimen/margin_top"
                    android:text="@string/description_title" />

                <TextView
                    android:id="@+id/description_content"
                    style="@style/DescriptionContent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/description_title"
                    android:layout_marginBottom="@dimen/margin_bottom"
                    android:layout_marginLeft="@dimen/margin_left_and_start_"
                    android:layout_marginStart="@dimen/margin_left_and_start_"
                    android:text="@string/description_content" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <View
                    style="@style/SeparatorView"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/separator_layout_height">

                </View>

                <TextView
                    android:id="@+id/contact_details"
                    style="@style/Title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_bottom"
                    android:layout_marginLeft="@dimen/margin_left_and_start_"
                    android:layout_marginStart="@dimen/margin_left_and_start_"
                    android:layout_marginTop="@dimen/margin_top"
                    android:text="@string/contact_details" />

                <TextView
                    android:id="@+id/city_view"
                    style="@style/CityName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/contact_details"
                    android:layout_marginBottom="@dimen/margin_bottom"
                    android:layout_marginLeft="@dimen/margin_left_and_start_"
                    android:layout_marginStart="@dimen/margin_left_and_start_"
                    android:layout_marginTop="@dimen/margin_top"
                    android:text="@string/city" />

                <TextView
                    android:id="@+id/address"
                    style="@style/ContactInfoTitles"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/city_view"
                    android:layout_marginLeft="@dimen/margin_left_and_start_"
                    android:layout_marginStart="@dimen/margin_left_and_start_"
                    android:text="@string/address" />

                <TextView
                    android:id="@+id/address_info"
                    style="@style/ContactInfo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/city_view"
                    android:layout_toEndOf="@+id/address"
                    android:layout_toRightOf="@+id/address"
                    android:text="@string/address_details" />

                <TextView
                    android:id="@+id/post_code"
                    style="@style/ContactInfoTitles"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/address"
                    android:layout_marginLeft="@dimen/margin_left_and_start_"
                    android:layout_marginStart="@dimen/margin_left_and_start_"
                    android:text="@string/post_code" />

                <TextView
                    android:id="@+id/post_code_info"
                    style="@style/ContactInfo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/address_info"
                    android:layout_toEndOf="@+id/post_code"
                    android:layout_toRightOf="@+id/post_code"
                    android:text="@string/post_code_details" />

                <TextView
                    android:id="@+id/phone"
                    style="@style/ContactInfoTitles"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/post_code"
                    android:layout_marginLeft="@dimen/margin_left_and_start_"
                    android:layout_marginStart="@dimen/margin_left_and_start_"
                    android:text="@string/phone" />

                <TextView
                    android:id="@+id/phone_info"
                    style="@style/ContactInfo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/post_code_info"
                    android:layout_toEndOf="@+id/post_code"
                    android:layout_toRightOf="@+id/post_code"
                    android:text="@string/phone_details" />

                <TextView
                    android:id="@+id/fax"
                    style="@style/ContactInfoTitles"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/phone"
                    android:layout_marginLeft="@dimen/margin_left_and_start_"
                    android:layout_marginStart="@dimen/margin_left_and_start_"
                    android:text="@string/fax" />

                <TextView
                    android:id="@+id/fax_info"
                    style="@style/ContactInfo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/phone_info"
                    android:layout_toEndOf="@+id/post_code"
                    android:layout_toRightOf="@+id/post_code"
                    android:text="@string/fax_details" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/city_view_2"
                    style="@style/CityName"
                    android:layout_width="wrap_content"

                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_bottom"
                    android:layout_marginLeft="@dimen/margin_left_and_start_"
                    android:layout_marginStart="@dimen/margin_left_and_start_"
                    android:layout_marginTop="@dimen/margin_top"
                    android:text="@string/city2"

                    />

                <TextView
                    android:id="@+id/address_2"
                    style="@style/ContactInfoTitles"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/city_view_2"
                    android:layout_marginLeft="@dimen/margin_left_and_start_"
                    android:layout_marginStart="@dimen/margin_left_and_start_"
                    android:text="@string/address"


                    />

                <TextView
                    android:id="@+id/address_info_2"
                    style="@style/ContactInfo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/city_view_2"
                    android:layout_toEndOf="@+id/address_2"
                    android:layout_toRightOf="@+id/address_2"
                    android:text="@string/address_details2" />

                <TextView
                    android:id="@+id/post_code_2"
                    style="@style/ContactInfoTitles"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/address_2"
                    android:layout_marginLeft="@dimen/margin_left_and_start_"
                    android:layout_marginStart="@dimen/margin_left_and_start_"
                    android:text="@string/post_code" />

                <TextView
                    android:id="@+id/post_code_info_2"
                    style="@style/ContactInfo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/address_info_2"
                    android:layout_toEndOf="@+id/post_code_2"
                    android:layout_toRightOf="@+id/post_code_2"
                    android:text="@string/post_code_details2" />

                <TextView
                    android:id="@+id/phone_2"
                    style="@style/ContactInfoTitles"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/post_code_2"
                    android:layout_marginLeft="@dimen/margin_left_and_start_"
                    android:layout_marginStart="@dimen/margin_left_and_start_"
                    android:text="@string/phone" />

                <TextView
                    android:id="@+id/phone_info_2"
                    style="@style/ContactInfo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/post_code_info_2"
                    android:layout_toEndOf="@+id/post_code_2"
                    android:layout_toRightOf="@+id/post_code_2"
                    android:text="@string/phone_details" />

                <TextView
                    android:id="@+id/fax_2"
                    style="@style/ContactInfoTitles"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/phone_2"
                    android:layout_marginLeft="@dimen/margin_left_and_start_"
                    android:layout_marginStart="@dimen/margin_left_and_start_"
                    android:text="@string/fax" />

                <TextView
                    android:id="@+id/fax_info_2"
                    style="@style/ContactInfo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/phone_info_2"
                    android:layout_toEndOf="@+id/post_code_2"
                    android:layout_toRightOf="@+id/post_code_2"
                    android:text="@string/fax_details" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/city_view_3"
                    style="@style/CityName"
                    android:layout_width="wrap_content"

                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_bottom"
                    android:layout_marginLeft="@dimen/margin_left_and_start_"
                    android:layout_marginStart="@dimen/margin_left_and_start_"
                    android:layout_marginTop="@dimen/margin_top"
                    android:text="@string/city3" />

                <TextView
                    android:id="@+id/address_3"
                    style="@style/ContactInfoTitles"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/city_view_3"
                    android:layout_marginLeft="@dimen/margin_left_and_start_"
                    android:layout_marginStart="@dimen/margin_left_and_start_"
                    android:text="@string/address" />

                <TextView
                    android:id="@+id/address_info_3"
                    style="@style/ContactInfo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/city_view_3"
                    android:layout_toEndOf="@+id/address_3"
                    android:layout_toRightOf="@+id/address_3"
                    android:text="@string/address_details3" />

                <TextView
                    android:id="@+id/post_code_3"
                    style="@style/ContactInfoTitles"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/address_3"
                    android:layout_marginLeft="@dimen/margin_left_and_start_"
                    android:layout_marginStart="@dimen/margin_left_and_start_"
                    android:text="@string/post_code" />

                <TextView
                    android:id="@+id/post_code_info_3"
                    style="@style/ContactInfo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/address_info_3"
                    android:layout_toEndOf="@+id/post_code_3"
                    android:layout_toRightOf="@+id/post_code_3"
                    android:text="@string/post_code_details3" />

                <TextView
                    android:id="@+id/phone_3"
                    style="@style/ContactInfoTitles"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/post_code_3"
                    android:layout_marginLeft="@dimen/margin_left_and_start_"
                    android:layout_marginStart="@dimen/margin_left_and_start_"
                    android:text="@string/phone" />

                <TextView
                    android:id="@+id/phone_info_3"
                    style="@style/ContactInfo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/post_code_info_3"
                    android:layout_toEndOf="@+id/post_code_3"
                    android:layout_toRightOf="@+id/post_code_3"
                    android:text="@string/phone_details" />

                <TextView
                    android:id="@+id/fax_3"
                    style="@style/ContactInfoTitles"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/phone_3"
                    android:layout_marginLeft="@dimen/margin_left_and_start_"
                    android:layout_marginStart="@dimen/margin_left_and_start_"
                    android:text="@string/fax" />

                <TextView
                    android:id="@+id/fax_info_3"
                    style="@style/ContactInfo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/phone_info_3"
                    android:layout_toEndOf="@+id/post_code_3"
                    android:layout_toRightOf="@+id/post_code_3"
                    android:text="@string/fax_details" />
            </RelativeLayout>
        </LinearLayout>

        <TextView
            style="@style/Website"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/website_marginTop"
            android:text="@string/website" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/footer_description"
            android:src="@drawable/leeuwenborgh_color_footer" />
    </LinearLayout>

</ScrollView>
